update: Add tag for backend api route, switch from OAuth2PasswordBearer to HttpBearer for the SWAGGER test
