# back-end/app/router.py
@@ -3,6 +3,6 @@ from app.routes import auth, task, board
 
 api_router = APIRouter()
 
-api_router.include_router(auth.router)
-api_router.include_router(board.router)
-api_router.include_router(task.router)
+api_router.include_router(auth.router, tags=["auth"])
+api_router.include_router(board.router, tags=["board"])
+api_router.include_router(task.router, tags=["task"])
